# relevect

./: .dockerignore  .gitignore  Dockerfile.api  README.md  compose.yml  requirements.txt
api/: main.py
core/: chunking.py  db.py  embeddings.py  parser.py  retrieval.py  schema.sql
desktop/: README.md
desktop/scripts/: build.mjs  dev.mjs
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docker/: docker-compose.yml  nginx-web.conf
tests/: test_week1_api.py
web-app/: Dockerfile  package-lock.json  package.json
web-app/src/: index.html  main.js  styles.css
